# elise-lead-pipeline

./: .gitignore  DEMO_SCRIPT.md  PART_A_Technical_Design.md  PART_B_Rollout_Plan.md  README.md  ROLLOUT_PLAN.md
.github/workflows/: cron.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260424_1200_initial_schema.py
backend/elise_leads/: __init__.py  cron.py  db.py  pipeline.py  settings.py
backend/elise_leads/alerting/: __init__.py  client.py  reports.py  rules.py
backend/elise_leads/api/: __init__.py  deps.py  main.py
backend/elise_leads/api/routers/: feedback.py  leads.py  metrics.py  runs.py  uploads.py  webhooks.py
backend/elise_leads/api/schemas/: __init__.py  feedback.py  lead.py  metrics.py  run.py  upload.py
backend/elise_leads/data/: nmhc_top_50.json
backend/elise_leads/enrichers/: __init__.py  _http.py  base.py  census_acs.py  census_geocoder.py  fred.py  news.py  nmhc.py  orchestrator.py  walkscore.py  wikipedia.py
backend/elise_leads/generation/: __init__.py  email.py  hallucination.py  insights.py  llm_client.py  prompts.py  proof_points.py
backend/elise_leads/models/: __init__.py  alert.py  api_log.py  base.py  email.py  enriched.py  feedback.py  lead.py  provenance.py  run.py  score.py
backend/elise_leads/scoring/: __init__.py  dimensions.py  rubric.py
backend/scripts/: seed_demo.py  simulate_crm_webhook.py
backend/tests/: conftest.py
backend/tests/fixtures/: golden_cases.py
backend/tests/unit/: test_alerting.py  test_api.py  test_dimensions.py  test_enrichers_http.py  test_generation.py  test_models.py  test_nmhc.py  test_orchestrator.py  test_pipeline.py  test_rubric.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: EmailEditor.tsx  KPICard.tsx  Layout.tsx  PageHeader.tsx  ProvenancePanel.tsx  ScoreBreakdown.tsx  StatusBadge.tsx  TodayProgress.tsx
frontend/src/components/charts/: TierDonut.tsx  TrendChart.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Inbox.tsx  LeadDetail.tsx  Leads.tsx  Overview.tsx  RunDetail.tsx  Runs.tsx  Upload.tsx
frontend/src/styles/: globals.css
infra/: docker-compose.yml
