[project]
name = "elise-leads"
version = "0.1.0"
description = "EliseAI inbound lead enrichment, scoring, and outreach drafting pipeline"
readme = "../README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "EliseAI GTM Engineering" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",  # for CSV file uploads
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",       # Postgres async driver
    "aiosqlite>=0.20",     # SQLite async driver (local dev)
    "alembic>=1.14",
    "greenlet>=3.1",       # required by SQLAlchemy async
    # Config & validation
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    # HTTP & retries
    "httpx>=0.28",
    "tenacity>=9.0",
    # Observability
    "structlog>=24.4",
    # External services
    "anthropic>=0.40",
    "resend>=2.5",
    # Utilities
    "python-dotenv>=1.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
    "pytest-httpx>=0.36.2",
    "respx>=0.23.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elise_leads"]

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ----------------------------------------------------------------------------
# Ruff (lint + format)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False

# ----------------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
